Add nesting protocol under chapter behavior

--- a/demo/docs/book.toml
+++ b/demo/docs/book.toml
@@ -8,4 +8,4 @@ title = "mdbook-protobuf"
 [preprocessor.protobuf]
 #generated in build.rs, see line `.file_descriptor_set_path("./docs/build/proto_file_descriptor.pb")`
 proto_descriptor = "./build/proto_file_descriptor_set.pb"
-generate_reference_section = true
+nest_under = "Protocol"
