--- a/mdbook-protobuf/Cargo.toml
+++ b/mdbook-protobuf/Cargo.toml
@@ -15,3 +15,6 @@ prost-types = "0.13.2"
 prost = "0.13.2"
 bytes = "1.7.1"
 askama = "0.12.1"
+pulldown-cmark-to-cmark = "17.0.0"
+pulldown-cmark = "0.12.1"
+regex = "1.10.6"
