--- a/demo/docs/book.toml
+++ b/demo/docs/book.toml
@@ -5,12 +5,15 @@ multilingual = false
 src = "src"
 title = "mdbook-protobuf"
 
+[preprocessor]
+
 [preprocessor.protobuf]
-#generated in build.rs, see line `.file_descriptor_set_path("./docs/build/proto_file_descriptor.pb")`
-proto_descriptor = "./build/proto_file_descriptor_set.pb"
-nest_under = "Protocol"
-proto_url_root = "https://github.com/zakhenry/mdbook-protobuf/tree/master/demo/proto/"
+command = "mdbook-protobuf"
+proto_descriptor = "./f/proto_file_descriptor_set.pb" # Edit this!
+#nest_under = "protocol" # if you want to have the proto reference placed as a child of a page - set that page name here.
+proto_url_root = "https://example.com/path/to/your/proto/directory" # remove this if you don't have a source to link to
+
+[output]
 
 [output.html]
-additional-css = ["assets/custom.css"]
-no-section-label = true
+additional-css = ["mdbook-protobuf.css"]
